feat: org-level feature flags (#14)
